# FinOps-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/finops_agent/: agent.py  config.py  guardrails.py  handler.py
src/finops_agent/aws/: clients.py
src/finops_agent/tools/: cost_analysis.py  resource_audit.py
